New /suggest_finishing endpoint
